# trevm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: pre-push.sh
.claude/skills/: trevm.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  rust-ci.yml  rust.yml
.github/workflows/: rust-audit-security.yml  rust-ci.yml
examples/: README.md  basic_transact.rs  fork_ref_transact.rs  fork_ref_transact.rs.bak  trevm_basic_example.rs  trevm_block_driver_example.rs  trevm_inspector_example.rs  tx_tracer_cli.rs
src/: alloy.rs  builder.rs  connect.rs  est.rs  evm.rs  ext.rs  fill.rs  helpers.rs  lib.rs  lifecycle.rs  macros.rs  output.rs  postflight.rs  states.rs  test_utils.rs  zenith.rs
src/db/: alloy.rs  builder.rs  cache_state.rs  mod.rs  sync_state.rs  test_utils.rs  traits.rs
src/db/cow/: mod.rs
src/db/sync/: builder.rs  cache.rs  error.rs  mod.rs  state.rs
src/driver/: alloy.rs  block.rs  bundle.rs  chain.rs  mod.rs
src/evm/: all_states.rs  builder.rs  errored.rs  factory.rs  has_block.rs  has_cfg.rs  has_tx.rs  mod.rs  need_block.rs  need_cfg.rs  need_tx.rs  ready.rs  struct.rs  transacted.rs
src/fill/: alloy.rs  fillers.rs  mod.rs  noop.rs  traits.rs  zenith.rs
src/inspectors/: layer.rs  mod.rs  set.rs  spanning.rs  stack.rs  timeout.rs  tracing.rs  with_output.rs
src/journal/: coder.rs  index.rs  mod.rs  update.rs
src/lifecycle/: contexts.rs  cycles.rs  mod.rs  output.rs  postflight.rs  receipt.rs  trait.rs
src/syscall/: eip4788.rs  eip6110.rs  eip7002.rs  eip7251.rs  fill.rs  mod.rs
src/system/: eip2935.rs  eip4788.rs  eip4895.rs  eip6110.rs  eip7002.rs  eip7251.rs  fill.rs  mod.rs
