[package]
name = "trevm"
version = "0.19.9"
rust-version = "1.83.0"
edition = "2021"
authors = ["init4"]
homepage = "https://github.com/init4tech/trevm"
repository = "https://github.com/init4tech/trevm"
license = "MIT OR Apache-2.0"
description = "A typestate API wrapper for the revm EVM implementation"

[lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[lints.rustdoc]
all = "warn"

[lints.clippy]
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[dependencies]
alloy = { version = "=0.11.1", default-features = false, features = ["consensus", "rpc-types-mev", "eips", "k256", "std", "rlp", "sol-types"] }

revm = { version = "19.5.0", default-features = false, features = ["std"] }

zenith-types = { version = "0.15" }

dashmap = { version = "6.1.0", optional = true }
tracing = { version = "0.1.41", optional = true}
thiserror = "2.0.11"

[dev-dependencies]
revm = { version = "19.5.0", features = [
    "test-utils",
    "serde-json",
    "std",
    "alloydb",
] }

# misc
eyre = "0.6"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }


[features]
default = [
    "call",
    "concurrent-db",
    "estimate_gas",
    "revm/std",
    "revm/c-kzg",
    "revm/blst",
    "revm/portable",
    "revm/secp256k1",
]

call = ["optional_eip3607", "optional_no_base_fee"]

concurrent-db = ["dep:dashmap"]

estimate_gas = ["optional_eip3607", "optional_no_base_fee", "dep:tracing"]

test-utils = ["revm/test-utils", "revm/std", "revm/serde-json", "revm/alloydb"]

secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
blst = ["revm/blst"]

portable = ["revm/portable"]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
    "optional_beneficiary_reward",
]

memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_beneficiary_reward = ["revm/optional_beneficiary_reward"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_eip3607 = ["revm/optional_eip3607"]
optional_gas_refund = ["revm/optional_gas_refund"]
optional_no_base_fee = ["revm/optional_no_base_fee"]
full_env_cfg = [
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
    "optional_beneficiary_reward",
]
