[package]
name = "trevm"
version = "0.27.7"
rust-version = "1.83.0"
edition = "2021"
authors = ["init4"]
homepage = "https://github.com/init4tech/trevm"
repository = "https://github.com/init4tech/trevm"
license = "MIT OR Apache-2.0"
description = "A typestate API wrapper for the revm EVM implementation"

[lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[lints.rustdoc]
all = "warn"

[lints.clippy]
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[[example]]
name = "basic_transact"

[[example]]
name = "fork_ref_transact"
required-features = ["alloy-db"]

[dependencies]
alloy = { version = "1.0.13", default-features = false, features = [
    "consensus",
    "rpc-types-mev",
    "eips",
    "k256",
    "std",
    "rlp",
    "sol-types",
] }

revm = { version = "27.0.1", default-features = false }

dashmap = { version = "6.1.0", optional = true }
tracing = { version = "0.1.41", optional = true }
thiserror = "2.0.11"

tokio = { version = "1.44", optional = true }

[dev-dependencies]
revm = { version = "27.0.1", features = ["serde-json", "std", "alloydb"] }
trevm = { path = ".", features = ["test-utils"] }

alloy = { version = "1.0.13", features = ["providers", "transports"] }

# misc
eyre = "0.6"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }


[features]
default = [
    "call",
    "concurrent-db",
    "estimate_gas",
    "revm/std",
    "revm/c-kzg",
    "revm/blst",
    "revm/portable",
    "revm/secp256k1",
]

alloy-db = ["dep:tokio", "alloy/providers"]

call = ["optional_eip3607", "optional_no_base_fee"]

concurrent-db = ["dep:dashmap"]

estimate_gas = ["optional_eip3607", "optional_no_base_fee", "dep:tracing"]

test-utils = ["revm/std", "revm/serde-json", "revm/alloydb"]

secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
blst = ["revm/blst"]

portable = ["revm/portable"]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
]

memory_limit = ["revm/memory_limit"]
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_eip3607 = ["revm/optional_eip3607"]
optional_no_base_fee = ["revm/optional_no_base_fee"]
full_env_cfg = [
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
]
